@@ -1,3 +1,10 @@
+2006-09-20    <risc@volumehost.com>
+
+	* FeatureExtraction/gabor.c
+	use one more memset.
+	reverse order of conv[] in memory.
+	swap conv[]'s x and y axis, to use in-order memory accesses.
+
 2006-09-19    <risc@volumehost.com>
 
 	* FeatureExtraction/gabor.c
